--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,18 @@ a {
   margin-right: auto;
   /* outline: 2px solid red; */
 }
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 
 .button {
   display: inline-block;
@@ -665,19 +677,44 @@ a {
   font-size: 14px;
   line-height: calc(24 / 14);
   color: var(--primary-text-color);
-  margin-left: 7px;
   display: flex;
   align-items: center;
 }
-.modal-checkbox-text::before {
+.modal-checkbox-text span {
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
+  margin-right: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal-checkbox-icon {
+  fill: transparent;
+}
+.modal-checkbox:checked + .modal-checkbox-text span {
+  background-color: var(--akcent-text-color);
+  border: none;
+}
+.modal-checkbox:checked + .modal-checkbox-text svg {
+  fill: var(--secondary-text-color);
+}
+/* .modal-checkbox-text::before {
   content: "";
   width: 16px;
   height: 15px;
   border: 2px solid var(--title-text-color);
   border-radius: 2px;
-  display: block;
   margin-right: 7px;
 }
+.modal-checkbox:checked + .modal-checkbox-text::before {
+  background-color: var(--akcent-text-color);
+  background-image: url(../images/check.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+} */
 
 /*---------------- Портфолио ------------------*/
 
