--- a/css/styles.css
+++ b/css/styles.css
@@ -683,6 +683,10 @@ a {
   fill: var(--secondary-text-color);
 }
 .modal-checkbox-link {
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  display: flex;
+  align-items: center;
   color: var(--akcent-text-color);
   text-decoration: underline;
 }
@@ -691,7 +695,6 @@ a {
 }
 .modal-submit {
   display: flex;
-
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
