--- a/css/styles.css
+++ b/css/styles.css
@@ -523,6 +523,73 @@ a {
 .footer-socials-item:not(:last-child) {
   margin-right: 10px;
 }
+/*---------------Footer subscribe-----------------*/
+.subscribe-form {
+  margin-left: auto;
+}
+.subscribe-title {
+  display: flex;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  text-transform: uppercase;
+  color: var(--secondary-text-color);
+  margin-bottom: 20px;
+}
+.subscribe-input-wrap {
+  display: flex;
+  flex-direction: row;
+}
+.subscribe-input {
+  width: 358px;
+  height: 50px;
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  outline: none;
+  padding: 15px 16px;
+  transition: border-color var(--transition);
+}
+.subscribe-input:focus {
+  border-color: var(--akcent-text-color);
+}
+.subscribe-input::placeholder {
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscribe-submit {
+  display: flex;
+  flex-direction: row;
+  padding: 10px 28px 10px 29px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  letter-spacing: 0.06em;
+  color: var(--secondary-text-color);
+  background-color: var(--akcent-text-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  margin-left: 12px;
+  cursor: pointer;
+  transition: background-color var(--transition);
+  align-items: center;
+  text-align: center;
+}
+.subscribe-submit:hover,
+.subscribe-submit:focus {
+  background-color: #188ce8;
+}
+.subscribe-icon {
+  margin-left: 10px;
+}
 
 /*-------------- Модальное окно ---------------*/
 .backdrop {
@@ -531,7 +598,8 @@ a {
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
-  transition: opasity 500ms, visibility 500ms;
+  opacity: 1;
+  transition: opacity 500ms, visibility 500ms;
 }
 .is-hidden {
   opacity: 0;
@@ -570,9 +638,10 @@ a {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  transition: color var(--transition);
 }
 .modal-close-svg {
-  transition: color var(--transition);
+  transition: fill var(--transition);
 }
 .modal-close-svg:hover,
 .modal-close-svg:hover {
@@ -605,6 +674,7 @@ a {
   box-sizing: border-box;
   border-radius: 4px;
   cursor: pointer;
+  transition: border-color var(--transition);
 }
 .modal-input:focus,
 .modal-text:focus {
@@ -618,6 +688,7 @@ a {
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
+  transition: color var(--transition);
 }
 .modal-label {
   font-size: 12px;
@@ -642,6 +713,7 @@ a {
   resize: none;
   outline: none;
   cursor: pointer;
+  transition: border-color var(--transition);
 }
 .modal-text::placeholder {
   font-size: 12px;
@@ -649,12 +721,18 @@ a {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
+.modal-checkbox-text-content {
+  display: flex;
+  margin-bottom: 30px;
+}
+
 .modal-checkbox-text {
   font-size: 14px;
   line-height: calc(24 / 14);
   color: var(--primary-text-color);
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .modal-checkbox-text span {
   width: 16px;
@@ -681,10 +759,11 @@ a {
   line-height: calc(24 / 14);
   color: var(--akcent-text-color);
   text-decoration: underline;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.modal-checkbox-text-content {
-  margin-bottom: 30px;
-}
+
 .modal-submit {
   display: block;
   font-weight: 700;
@@ -725,7 +804,6 @@ a {
 
 .button.primary {
   padding: 6px 22px;
-
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -772,7 +850,7 @@ a {
 .activities-item-link {
   display: block;
 
-  transition: box-shadow var(--transition));
+  transition: box-shadow var(--transition);
 }
 .activities-wrap {
   position: relative;
